Fixed spacing

--- a/style.css
+++ b/style.css
@@ -22,3 +22,12 @@
 .fa-link {
 	color: black;
 }
+
+.together {
+	margin: 0;
+	line-height: 16px;
+}
+
+.buffer {
+	margin-bottom: 8px;
+}
